dpkg (1.18.2) UNRELEASED; urgency=low

  [ Guillem Jover ]
  * Fix plural form translations for single plural languages. Closes: #790025
  * Perl modules:
    - Remove non-functional timezone name support from
      Dpkg::Changelog::Entry::Debian.
    - Use Time::Piece (part of the perl core distribution) instead of
      Date::Parse in Dpkg::Changelog::Entry::Debian. This reduces the build
      and run-time dependencies, and helps architecture bootstrapping.
    - Simplify distribution splitting in Dpkg::Changelog::Entry::Debian.
    - Add new function changelog_parse_plugin() in Dpkg::Changelog::Parse.
    - Add new function changelog_parse_debian() in Dpkg::Changelog::Parse, and
      use it in changelog_parse() instead of the external plugin parser when
      the input format is “debian”. This significantly speeds up the parsing.
    - Remove trailing space before handling blank line dot-separator in
      Dpkg::Control::HashCore. Regression introduced in dpkg 1.18.0.
      Reported by Jakub Wilk <jwilk@debian.org>. Closes: #789580
    - Allow the Maintainer field in CTRL_FILE_STATUS.
    - Import make_path from File::Path in Dpkg::Source::Package::V2.
      Regression introduced in dpkg 1.18.0. Closes: #789957
    - Make the BinaryFiles subpackage self-contained by explicitly importing
      File::Spec in Dpkg::Source::Package::V2.
    - Do not exclude pre-existing symlinks when unpacking the debian/ tarball
      in Dpkg::Source::Package::V2. Closes: #790073, #791535
    - Disable the thread sanitizer when the address sanitizer is enabled
      in Dpkg::Vendor::Debian as these are mutually incompatible, and make
      sanitize=+all not work at all.
    - Allow colons (:) in added filenames in Dpkg::Dist::Files, which can be
      present when the upstream version contains colons. Regression introduced
      in dpkg 1.18.0. Reported by Jakub Wilk <jwilk@debian.org>.
  * Documentation:
    - Fix grammar in dpkg-architecture(1).