@@ -2,6 +2,7 @@ dpkg (1.18.2) UNRELEASED; urgency=low
 
   [ Guillem Jover ]
   * Fix plural form translations for single plural languages. Closes: #790025
+  * Add new dpkg-buildpackage -J option, which is a safe version of -j.
   * Perl modules:
     - Remove non-functional timezone name support from
       Dpkg::Changelog::Entry::Debian.
